--- a/css/creative.css
+++ b/css/creative.css
@@ -159,7 +159,7 @@ img::-moz-selection {
     background-color: transparent;
   }
   #mainNav .navbar-brand {
-    color: rgba(255, 255, 255, 0.7);
+    color: rgb(255, 255, 255);
   }
   #mainNav .navbar-brand:focus, #mainNav .navbar-brand:hover {
     color: #0f2f4d;
@@ -198,7 +198,7 @@ img::-moz-selection {
 header.masthead {
   padding-top: 10rem;
   padding-bottom: calc(10rem - 56px);
-  background:url(../img/2020/header2_sc20.jpg);
+  background:url(../img/2020/background3.png);
   background-position: center center;
   background-size: cover;
 }
