--- a/css/creative.css
+++ b/css/creative.css
@@ -112,6 +112,12 @@ img::-moz-selection {
   background: transparent;
 }
 
+.img-borders {
+	border: none;
+	border-radius: 0px;
+	background-color: transparent;
+}
+
 #mainNav {
   border-bottom: 1px solid rgba(33, 37, 41, 0.1);
   background-color: #fff;
@@ -193,6 +199,11 @@ img::-moz-selection {
   #mainNav.navbar-shrink .navbar-nav > li.nav-item > a.nav-link:focus:hover {
     color: #070605;
   }
+}
+
+.spacing {
+	width: 100%;
+	height: 7%;
 }
 
 header.masthead {
@@ -324,7 +335,8 @@ header.masthead p {
   font-weight: 700;
   text-transform: uppercase;
   border: 5px solid #000;
-  background-color: #A4E425;
+  background-color: #129490;
+  color:#fff;
   border-radius: 0px;
   font-family: 'Source Sans Pro', sans-serif;
 }
@@ -333,18 +345,19 @@ header.masthead p {
   padding: 1rem 2rem;
 }
 
+.btn:hover, .btn:focus, .btn:active, .btn-primary:hover, .btn-primary:focus, .btn-primary:active {
+  color:#fff;
+  background-color: #129094 !important;	
+  border-color: #072AC8;
+}
+
 .btn-primary {
-  color:#0f2f4d;
-  background-color: #A4E425;
+  color:#fff;
+  background-color: #129490;
   line-height: 0.5rem;
   margin-top: 1rem ;
   border-radius: 0px;
   border: 5px solid #000;
-}
-
-.btn-primary:hover, .btn-primary:focus, .btn-primary:active {
-  color: #ffff;
-  background-color: #b1db3b !important;
 }
 
 .btn-primary:active, .btn-primary:focus {
