--- a/css/creative.css
+++ b/css/creative.css
@@ -118,6 +118,12 @@ img::-moz-selection {
 	background-color: transparent;
 }
 
+.multilingual {
+	border-style: none solid;
+	border-width: 2px;
+	border-color: #1a67a8;
+}
+
 #mainNav {
   border-bottom: 1px solid rgba(33, 37, 41, 0.1);
   background-color: #fff;
